Fix SplitButton spacing

--- a/src/components/Button/SplitButton/SplitButton.module.css
+++ b/src/components/Button/SplitButton/SplitButton.module.css
@@ -61,6 +61,10 @@
     gap: 0.3em;
 }
 
+.toggleButton {
+    padding: 0;
+}
+
 .toggleButton:before {
     content: "\00a0";
     border-left: 3px solid var(--primary-background-color, #222);
